keywords: 'what"s new, features, new, release notes, enhancements, fixes, digital wallet, bluexp digital wallet' 
summary: Informieren Sie sich über die Neuerungen beim Digital Wallet von BlueXP. 
---
= Was ist neu
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Informieren Sie sich über die Neuerungen beim Digital Wallet von BlueXP.



== 30 Juli 2023



=== Verbesserte Nutzungsberichte

Die Berichte zur Cloud Volumes ONTAP-Nutzung wurden nun um einige Verbesserungen verbessert:

* Die tib-Einheit ist jetzt im Namen der Spalten enthalten.
* Ein neues _Node(s)_-Feld für Seriennummern ist nun enthalten.
* Im Bericht zur Auslastung von Storage-VMs wird jetzt eine neue Spalte „_Workload Type_“ angezeigt.
* Die Namen der Arbeitsumgebung sind jetzt in den Berichten zu Storage-VMs und Volume-Nutzung enthalten.
* Der Datenträgertyp _file_ wird nun mit _Primary (Read/Write)_ beschriftet.
* Der Datenträgertyp _secondary_ wird jetzt mit _secondary (DP)_ bezeichnet.


Weitere Informationen zu Nutzungsberichten finden Sie unter https://docs.netapp.com/us-en/bluexp-digital-wallet/task-manage-capacity-licenses.html#download-usage-reports["Nutzungsberichte herunterladen"].



== 7 Mai 2023



=== Google Cloud-Angebote

Das BlueXP Digital Wallet identifiziert jetzt Google Cloud Marketplace Abonnements, die mit einem privaten Angebot verbunden sind, sowie Enddatum und Laufzeit des Abonnements. Durch diese Erweiterung können Sie überprüfen, ob Sie das private Angebot erfolgreich angenommen haben, und die Bedingungen bestätigen.



=== Aufladeaufschlüsselung
