@@ -76,7 +76,6 @@
   <block id="328a2c1e7778e9edaf79d90c51409ac4" category="list-text">Wenn Sie über ein Konto auf Kundenebene verfügen, können Sie ein oder mehrere NSS-Konten hinzufügen.</block>
   <block id="e3cd99e4aa330ae6bdfb3754d83ae962" category="list-text">Wenn Sie einen Partner- oder Reseller-Account haben, können Sie ein oder mehrere NSS-Konten hinzufügen, können aber nicht neben Kunden-Level Accounts hinzugefügt werden.</block>
   <block id="b50f0a46135bcb7083b1f2f82032fc26" category="inline-image-macro">Ein Screenshot des Hilfemenü, in dem Support die erste Option aufgeführt ist</block>
-  <block id="19d089db572ee6a1e154a0c9c9e57bfd" category="paragraph">NetApp verwendet Microsoft Azure Active Directory als Identitäts-Provider für Authentifizierungsservices, die sich speziell für Support und Lizenzierung entscheiden.</block>
   <block id="465ec6d5eafa3524c948c99d8bfcd306" category="list-text">Geben Sie auf der Anmeldeseite die registrierte E-Mail-Adresse und das Kennwort Ihrer NetApp Support Site an, um den Authentifizierungsvorgang durchzuführen.</block>
   <block id="cbc6cc3bb022583403171b447b2a962c" category="paragraph">Mit diesen Aktionen kann BlueXP Ihr NSS-Konto für Dinge wie Lizenzdownloads, Softwareaktualisierungs-Verifizierung und zukünftige Support-Registrierungen verwenden.</block>
   <block id="cf3a2d2c139bf5c9cc87fe714bfff3b1" category="paragraph">Beachten Sie Folgendes:</block>
@@ -121,8 +120,6 @@
   <block id="00c5fef3bb9d593ae96bf5d2ee60354a" category="paragraph">Treten Sie der BlueXP Community bei, um laufende Diskussionen zu verfolgen oder neue zu erstellen.</block>
   <block id="5b6cf869265c13af8566f192b4ab3d2a" category="list-text">Dokumentation</block>
   <block id="a4a6c2ea0078252eac2d74ef3e6c917c" category="paragraph">Die BlueXP-Dokumentation, die Sie gerade anzeigen.</block>
-  <block id="80b1b0d2b1ebf2b3cba2d25759801afd" category="list-text">Mailto:ng-cloudmanager-feedback@netapp.com[Feedback email]</block>
-  <block id="6702efec14563f45f1ee2f8c613b8ad8" category="paragraph">Wir wissen Ihre Vorschläge zu schätzen. Senden Sie uns Ihr Feedback, um BlueXP zu verbessern.</block>
   <block id="d88bacf2a9fdcbbc844edcba97c34e30" category="section-title">Erstellen Sie einen Fall mit dem NetApp Support</block>
   <block id="82812db645b6ff5e9c2a24ddfb66c8d6" category="paragraph">Zusätzlich zu den oben genannten Self-Support-Optionen können Sie gemeinsam mit einem NetApp Support-Experten eventuelle Probleme nach der Aktivierung des Supports beheben.</block>
   <block id="8fece025a1a8fef7018449bf104a2527" category="paragraph-title">Bevor Sie beginnen</block>
@@ -390,19 +387,11 @@
   <block id="d56bf07ec8cd4e9f29339d605ffef95c" category="sidebar">Node-basierte Lizenzen</block>
   <block id="064ff692e4b4a468969f66368c68e2c8" category="sidebar">Management von Lizenzen für On-Premises-ONTAP-Cluster</block>
   <block id="0adc03eac86772ad2c75c8f140be417e" category="sidebar">Wissen und Support</block>
-  <block id="25b1fde564bb1fc860069167d8668df6" category="sidebar">Verwalten Sie Ihre Lizenzen</block>
-  <block id="7cbe4872773ca07492a76acf7d557fef" category="sidebar">Management kapazitätsbasierter Lizenzen für Cloud Volumes ONTAP</block>
-  <block id="813011e2103649bb71f124adedcc10ea" category="sidebar">Blogs und Community</block>
-  <block id="dd490b81914dd945601e442a41cb4222" category="sidebar">NetApp Community</block>
-  <block id="bd5465eb0e8cf8f303aee7ea9420c8b1" category="sidebar">BlueXP-Blog</block>
-  <block id="ad203e818e0c9d7f42f1c260b33875f3" category="sidebar">Cloud-Webinare</block>
   <block id="49f326995814ee311b340478f99f992f" category="doc">BlueXP Digital Wallet – Dokumentation</block>
   <block id="d73d2254cb7a33ffdc126efbce99e623" category="list-text">Abonnements für PAYGO- und Jahresverträge in Verbindung mit Ihrem BlueXP Konto und mit Astra Control managen</block>
-  <block id="bf4700247951934a88713e31aa00a0a6" category="paragraph">Das Digital Wallet von BlueXP ermöglicht Ihnen das Management von Lizenzen für folgende Bereiche:</block>
   <block id="be062cdcabbb3055334e8f19b4bdf378" category="list-text">Backup und Recovery</block>
   <block id="5c9335b28e6277ddbe0137f04e5e58a7" category="list-text">Klassifizierung</block>
   <block id="337c62c6b6eb7319bae58701105e889c" category="list-text">Tiering</block>
-  <block id="fd75ff71faa02dfc85d4684cc9a98740" category="summary">Das Digital Wallet von BlueXP ermöglicht das Management von Lizenzen, die Sie direkt von NetApp (BYOL) erworben haben, um sie für Backup und Recovery, Klassifizierung und Tiering von BlueXP zu nutzen. Sie können die genutzte Lizenzkapazität einsehen, wie viel freie Kapazität Sie noch haben, und Sie werden benachrichtigt, wenn Sie das Kapazitätslimit oder das Ablaufdatum erreicht haben.</block>
   <block id="f4b04af639ebf32754e26b928989f33f" category="inline-link">Lizenzierung für Backup und Recovery von BlueXP einrichten</block>
   <block id="6212c283c0695ee1a154f1a6cdde74ef" category="inline-link">Lizenzierung für die BlueXP Klassifizierung einrichten</block>
   <block id="8202299929ccdfe388049a03c2c36d60" category="inline-link">Lizenzierung für BlueXP Tiering einrichten</block>
@@ -437,7 +426,6 @@
   <block id="cf5f3091e30dee6597885d8c0e0c357f" category="list-text">Laufzeit</block>
   <block id="314c4a4eeddb6d1cd1f813b95714f7a2" category="list-text">Wenn Ihr Google Cloud-Abonnement mit einem privaten Angebot verknüpft ist und dieses private Angebot nach Erstellung und Annahme geändert wurde, wird in der Laufzeit N/A angezeigt In diesem Szenario enthält die API-Antwort, die wir vom Google Cloud Marketplace erhalten, keine term-bezogenen Informationen.</block>
   <block id="3b3f3f7253f4c57a7eb145d69d119e28" category="list-text">Wenn Sie ein privates Google Cloud-Angebot haben, sind keine Vertragsoptionen verfügbar.</block>
-  <block id="885ce97feb1a2410a348b3f3764dee9d" category="list-text">Managen Sie die Keystone Abonnementservices zur Verwendung mit Cloud Volumes ONTAP und fordern Sie Änderungen der gebuchten Kapazität an</block>
   <block id="4112533811706ae9c45d956e68299f46" category="paragraph">Managen Sie Ihre kapazitätsbasierten Lizenzen aus dem Digital Wallet von BlueXP, um sicherzustellen, dass Ihr NetApp Konto über genügend Kapazitäten für Ihre Cloud Volumes ONTAP Systeme verfügt.</block>
   <block id="b37ea3f4c93245969c515634c741e9bf" category="paragraph">Mit der _BlueXP Digital Wallet_ können Sie Lizenzen für Cloud Volumes ONTAP von einem einzigen Standort aus managen. Sie können neue Lizenzen hinzufügen und vorhandene Lizenzen aktualisieren.</block>
   <block id="03fc5be3f1d32a032f3da42181c0e6ed" category="section-title">Hinzufügen von Lizenzen zum Digital Wallet von BlueXP</block>
@@ -622,4 +610,22 @@
   <block id="d7105dd212dc96a8b292b6b48f84916f" category="paragraph"><block ref="d7105dd212dc96a8b292b6b48f84916f" category="inline-link-rx"></block></block>
   <block id="28ca5cda5cdef790c457097830d81ca5" category="paragraph">Wenn Sie kein Keystone Abonnement mehr mit BlueXP nutzen möchten, können Sie die Verknüpfung zum Abonnement aufheben. Beachten Sie, dass Sie die Verknüpfung eines Abonnements, das nicht mit einem vorhandenen Cloud Volumes ONTAP-Abonnement verbunden ist, nur aufheben können.</block>
   <block id="33871b6190a8d5adbe8b15282054766c" category="sidebar">Was ist neu</block>
+  <block id="d0f4a98872ff48fd92ead596c5f85c7e" category="list-text">Managen Sie die Keystone Abonnementservices zur Verwendung mit Cloud Volumes ONTAP und den On-Premises-ONTAP-Clustern und fordern Sie Änderungen an der gebuchten Kapazität an</block>
+  <block id="7665a7ac6a94a4b78d28cc5c7fc692e6" category="paragraph">Mit dem Digital Wallet von BlueXP können Sie Lizenzen für die folgenden Services managen:</block>
+  <block id="79ce4013f1223c98134fc4786fafb114" category="list-text"><block ref="79ce4013f1223c98134fc4786fafb114" category="inline-link-rx"></block></block>
+  <block id="20bba0563305cf02e9d03d24ebf6f41a" category="list-text"><block ref="20bba0563305cf02e9d03d24ebf6f41a" category="inline-link-rx"></block></block>
+  <block id="99cd6bbb6bd6b4f32aaf030548bc8abb" category="list-text"><block ref="99cd6bbb6bd6b4f32aaf030548bc8abb" category="inline-link-rx"></block></block>
+  <block id="645a84975202e30700b572b49a5ee29d" category="inline-link">Disaster Recovery</block>
+  <block id="0691bd698f71b96b0752ddbdd208c1aa" category="list-text"><block ref="8edaf8bb4e175626c9b01d0fbc3891ee" category="inline-link-rx"></block> (Nur BYOL)</block>
+  <block id="19a1ee48ff4a757e699cf87a3f0b593d" category="list-text"><block ref="19a1ee48ff4a757e699cf87a3f0b593d" category="inline-link-rx"></block></block>
+  <block id="5ef4f6a3330e077263f2f73cd00474dc" category="list-text"><block ref="5ef4f6a3330e077263f2f73cd00474dc" category="inline-link-rx"></block></block>
+  <block id="d59e0b46782e48a01966e5c7ccc38d17" category="paragraph">NetApp verwendet Microsoft Entra ID als Identitätsanbieter für Authentifizierungsservices, die speziell auf Support und Lizenzierung zugeschnitten sind.</block>
+  <block id="7682c7f7c230bf75ef2083e67cfc7179" category="summary">Das Digital Wallet von BlueXP ermöglicht das Management von Lizenzen, die Sie direkt über NetApp (BYOL) erworben haben, um sie für Backup und Recovery, Klassifizierung, Disaster Recovery und Tiering von BlueXP zu nutzen. Sie können die genutzte Lizenzkapazität einsehen, wie viel freie Kapazität Sie noch haben, und Sie werden benachrichtigt, wenn Sie das Kapazitätslimit oder das Ablaufdatum erreicht haben.</block>
+  <block id="a7193edb26a4b1bca4b7b82254e6dd4b" category="inline-link">Lizenzierung für die Disaster Recovery von BlueXP einrichten</block>
+  <block id="ef7f2c35c52aa249a13384e6b07d0785" category="list-text"><block ref="ef7f2c35c52aa249a13384e6b07d0785" category="inline-link-rx"></block></block>
+  <block id="592997dde366d5775e7e052816854f74" category="section-title">5 März 2024</block>
+  <block id="c08885153d0680dab7349b930f5310c4" category="section-title">BlueXP Disaster Recovery</block>
+  <block id="1804830d648adf9126d51f4a827ca950" category="paragraph">Mit der Digital Wallet von BlueXP können Sie Lizenzen für die Disaster Recovery von BlueXP jetzt managen. Sie können Lizenzen hinzufügen, Lizenzen aktualisieren und Details zur lizenzierten Kapazität anzeigen.</block>
+  <block id="85bdddc8ce218c6365f105f9d309d898" category="inline-link">Managen Sie Lizenzen für BlueXP Datenservices</block>
+  <block id="ca654cde28a00db1fb587b8b6bb82015" category="paragraph"><block ref="ca654cde28a00db1fb587b8b6bb82015" category="inline-link-rx"></block></block>
 </blocks>
