@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar 
 permalink: task-manage-data-services-licenses.html 
-keywords: data services, byol, cloud backup, cloud tiering, data sense, cloud data sense, obtain license file, nlf, add license, update license, digital wallet, bluexp digital wallet, classification, bluexp classification, bluexp tiering, tiering, bluexp backup and recovery, backup and recovery 
-summary: 'Das Digital Wallet von BlueXP ermöglicht das Management von Lizenzen, die Sie direkt von NetApp (BYOL) erworben haben, um sie für Backup und Recovery, Klassifizierung und Tiering von BlueXP zu nutzen. Sie können die genutzte Lizenzkapazität einsehen, wie viel freie Kapazität Sie noch haben, und Sie werden benachrichtigt, wenn Sie das Kapazitätslimit oder das Ablaufdatum erreicht haben.' 
+keywords: data services, byol, cloud backup, cloud tiering, data sense, cloud data sense, obtain license file, nlf, add license, update license, digital wallet, bluexp digital wallet, classification, bluexp classification, bluexp tiering, tiering, bluexp backup and recovery, backup and recovery, disaster recovery 
+summary: 'Das Digital Wallet von BlueXP ermöglicht das Management von Lizenzen, die Sie direkt über NetApp (BYOL) erworben haben, um sie für Backup und Recovery, Klassifizierung, Disaster Recovery und Tiering von BlueXP zu nutzen. Sie können die genutzte Lizenzkapazität einsehen, wie viel freie Kapazität Sie noch haben, und Sie werden benachrichtigt, wenn Sie das Kapazitätslimit oder das Ablaufdatum erreicht haben.' 
 ---
 = Managen Sie Lizenzen für BlueXP Datenservices
 :hardbreaks:
@@ -14,12 +14,13 @@ summary: 'Das Digital Wallet von BlueXP ermöglicht das Management von Lizenzen,
 
 
 [role="lead"]
-Das Digital Wallet von BlueXP ermöglicht das Management von Lizenzen, die Sie direkt von NetApp (BYOL) erworben haben, um sie für Backup und Recovery, Klassifizierung und Tiering von BlueXP zu nutzen. Sie können die genutzte Lizenzkapazität einsehen, wie viel freie Kapazität Sie noch haben, und Sie werden benachrichtigt, wenn Sie das Kapazitätslimit oder das Ablaufdatum erreicht haben.
+Das Digital Wallet von BlueXP ermöglicht das Management von Lizenzen, die Sie direkt über NetApp (BYOL) erworben haben, um sie für Backup und Recovery, Klassifizierung, Disaster Recovery und Tiering von BlueXP zu nutzen. Sie können die genutzte Lizenzkapazität einsehen, wie viel freie Kapazität Sie noch haben, und Sie werden benachrichtigt, wenn Sie das Kapazitätslimit oder das Ablaufdatum erreicht haben.
 
 Die Anweisungen auf dieser Seite enthalten Informationen, die für jeden Service gelten. Weitere Informationen zur Lizenzierung für diese Services finden Sie auf den folgenden Seiten:
 
 * https://docs.netapp.com/us-en/bluexp-backup-recovery/task-licensing-cloud-backup.html["Lizenzierung für Backup und Recovery von BlueXP einrichten"^]
 * https://docs.netapp.com/us-en/bluexp-classification/task-licensing-datasense.html["Lizenzierung für die BlueXP Klassifizierung einrichten"^]
+* https://docs.netapp.com/us-en/bluexp-disaster-recovery/get-started/dr-licensing.html["Lizenzierung für die Disaster Recovery von BlueXP einrichten"^]
 * https://docs.netapp.com/us-en/bluexp-tiering/task-licensing-cloud-tiering.html["Lizenzierung für BlueXP Tiering einrichten"^]
 
 
